--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "3.21.2",
+    "body-parser": "1.15.2",
     "ejs": "1.0.0",
-    "body-parser": "1.15.2"
+    "express": "^4.22.1"
   },
   "engines": {
     "node": "20.x"
