--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "body-parser": "1.15.2",
-    "ejs": "1.0.0",
+    "ejs": "^3.1.10",
     "express": "^4.22.1"
   },
   "engines": {
