--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "body-parser": "1.15.2",
+    "body-parser": "^1.20.4",
     "ejs": "^3.1.10",
     "express": "^4.22.1"
   },
