--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Legacy Node.js app with Express and EJS",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "build": "node -c app.js"
   },
   "dependencies": {
     "body-parser": "^1.20.4",
